After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724264 - crash on cloning a profile
crash on cloning a profile
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: Profiles
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-13 02:33 UTC by Arnaud B.
Modified: 2014-02-17 21:42 UTC
See Also:
GNOME target: ---
GNOME version: 3.11/3.12



Description Arnaud B. 2014-02-13 02:33:09 UTC
Rawhide’s GNOME Terminal 3.11.0 crashes when cloning a profile.