profile: Fix dummy settings patch

Fixes crash when cloning a profile.

https://retrace.fedoraproject.org/faf/problems/1433130/
https://bugzilla.gnome.org/show_bug.cgi?id=724264